src/App.css
.container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  min-height: 100vh;
}

.container h1 {
  margin: 0;
  font-style: italic;
  text-align: center;
  font-size: 3rem;
  margin: 0.75rem;
}

.container .footnotes {
  margin: 0.75rem;
}

.container .footnote {
  margin: 0;
  font-size: 1rem;
}

.heart-wrapper {
  position: relative;
  width: 800px;
  height: 800px;
}

.heart {
  position: absolute;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.heart-wrapper .heart-text {
  position: absolute;
  top: 22rem;
  left: 25%;
  width: 50%;
  z-index: 2;
  text-align: center;
  color: white;
  font-size: 1.5rem;
}

.heart-left {
  clip-path: polygon(0% 0%, 50% 0%, 50% 100%, 0% 100%);
}

.heart-right {
  clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%);
}

/* Overlay text */
.text {
  position: absolute;
  top: 30%;
  width: 50%;
  text-align: center;
  font-weight: bold;
  color: white;
  pointer-events: none;
  opacity: 1;
  transition: opacity 0.3s ease;
  font-size: 2rem;
}

.text.left {
  left: 3rem;
}

.text.right {
  right: 3.5rem;
}

.poem {
  position: absolute;
  top: 30%;
  width: 280px;
  height: 360px;
  padding: 10px;
  text-align: center;
  pointer-events: none;
  opacity: 1;
  transition: opacity 0.3s ease;
  border: 2px solid black;
  border-radius: 20px;
  background: white;
  align-content: center;
}

.poem.right {
  left: 98%;
}

.poem.left {
  right: 100%;
}

.poem p {
  color: black;
  font-size: 1.25rem;
}

/* Samsung Galaxy Z Flip 4 portrait mode */
@media only screen and (min-width: 360px) and (max-width: 840px) and (orientation: portrait) {
  /* Your styles here */
  .container {
    height: 100vh;
    min-width: 100vw;
    width: 100vw;
  }

  .container h1 {
    font-size: 2rem;
  }

  .container .footnote {
    text-align: center;
  }

  .heart-wrapper {
    width: 400px;
    height: 400px;
  }

  .heart-wrapper .heart-text {
    top: 10rem;
    font-size: 1rem;
  }

  /* Overlay text */
  .text {
    font-size: 1rem;
  }

  .text.left {
    left: 2rem;
  }

  .text.right {
    right: 2rem;
  }

  .poem {
    left: 20% !important;
    width: 220px;
    height: 160px;
    padding: 10px;
  }

  .poem.right {
    top: 90%;
  }

  .poem.left {
    top: -30%;
  }

  .poem p {
    font-size: 0.75rem;
  }
}

